// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dropdown normal 1`] = `
<div
  className="dropdown is-active"
>
  <div
    class="dropdown-trigger"
  >
    <button
      className="button"
      disabled={false}
    >
      <span>
        Dropdown Button
      </span>
      <span
        className="icon "
      >
        <i
          className="fas fa-angle-down"
        />
      </span>
    </button>
  </div>
  <div
    class="dropdown-menu"
  >
    <div
      class="dropdown-content"
    >
      <a
        className="dropdown-item"
        href="https://ufsc.br"
        onClick={[Function]}
      >
        Dropdown Button
      </a>
      <a
        className="dropdown-item"
        href="https://ufsc.br"
      >
        Dropdown Item
      </a>
      <a
        className="dropdown-item"
        href="https://ufsc.br"
      >
        Other Dropdown Item
      </a>
      <a
        className="dropdown-item is-active"
        href="https://ufsc.br"
      >
        Active Dropdown Item
      </a>
      <a
        className="dropdown-item"
        href="https://ufsc.br"
      >
        Other Dropdown Item
      </a>
      <a
        className="dropdown-item"
        href="https://ufsc.br"
      >
        With a divider
      </a>
    </div>
  </div>
</div>
`;

exports[`dropdown with any type of content 1`] = `
<div
  className="dropdown is-active is-right"
>
  <div
    class="dropdown-trigger"
  >
    <button
      className="button"
      disabled={false}
    >
      <span>
        <p>
          You can insert 
          <strong>
            any type of content
          </strong>
           within the dropdown menu.
        </p>
      </span>
      <span
        className="icon "
      >
        <i
          className="fas fa-angle-down"
        />
      </span>
    </button>
  </div>
  <div
    class="dropdown-menu"
  >
    <div
      class="dropdown-content"
    >
      <div
        className="dropdown-item"
        onClick={[Function]}
      >
        <p>
          You can insert 
          <strong>
            any type of content
          </strong>
           within the dropdown menu.
        </p>
      </div>
      <div
        className="dropdown-item"
      >
        <p>
          You simply need to use a 
          <code>
            &lt;div&gt;
          </code>
           instead.
        </p>
      </div>
      <a
        className="dropdown-item"
      >
        This is a link
      </a>
    </div>
  </div>
</div>
`;
